Started the Home tab, added a timer to the application and completed missing parts of the Browse tab.
Now bets resolve when the last of its event finishes and payment of the
winnings is done.
Home window also refreshes every minute.