@@ -1,21 +1,10 @@
 package gui.Panels;
 
 import java.awt.Font;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Insets;
 import java.awt.SystemColor;
-import java.awt.Window;
 import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
-import java.util.Vector;
-
 import javax.swing.BorderFactory;
-import javax.swing.DefaultListModel;
 import javax.swing.JLabel;
-import javax.swing.JList;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
@@ -23,37 +12,28 @@ import javax.swing.JTextArea;
 import javax.swing.border.Border;
 import javax.swing.table.DefaultTableModel;
 import javax.swing.table.TableColumnModel;
-
 import businessLogic.BLFacade;
 import domain.Bet;
 import domain.Profile;
-import domain.User;
-import exceptions.InsufficientCash;
 import gui.BetDetail;
 import gui.MainGUI;
-import gui.User_Edit;
-
 import java.awt.Color;
 import javax.swing.JButton;
-import javax.swing.JDialog;
-import javax.swing.JFrame;
-
 import java.awt.event.ActionListener;
 import java.awt.event.ActionEvent;
 import javax.swing.JTable;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-import java.time.Duration;
 
+@SuppressWarnings("serial")
 public class ProfilePanel extends JPanel {
 
 	private Profile profile;
-	private BLFacade facade = MainGUI.getBusinessLogic();
+	//private BLFacade facade = MainGUI.getBusinessLogic();
 	private JTable table;
 	private JButton editbet;
 	private JButton DeleteBet;
 	private JButton ViewFulldetail;
-	private JButton editProfile;
 	private JScrollPane scrollPane;
 	private ArrayList<Bet> bet_list;
 	private DefaultTableModel TableModel;
@@ -65,7 +45,7 @@ public class ProfilePanel extends JPanel {
 	public ProfilePanel() {
 
 		setBackground(Color.WHITE);
-		
+
 
 		BLFacade facade = MainGUI.getBusinessLogic();
 		profile = facade.getProfile();
@@ -80,16 +60,10 @@ public class ProfilePanel extends JPanel {
 		lblUsername.setBounds(30, 87, 62, 16);
 		add(lblUsername);
 		
-		
-		//	System.out.println("Inside bro");
-			 
-	
-		
-
 		JTextArea textArea = new JTextArea();
 		textArea.setBounds(102, 84, 95, 22);
 		textArea.setBorder(border);
-        textArea.setBackground(SystemColor.menu);
+		textArea.setBackground(SystemColor.menu);
 		textArea.setEditable(false);
 		add(textArea);
 
@@ -125,58 +99,53 @@ public class ProfilePanel extends JPanel {
 		textArea_2.setBackground(SystemColor.menu);
 		textArea_2.setEditable(false);
 		add(textArea_2);
-		
 
-		    editbet = new JButton("Edit Bet Amount");
-			editbet.setEnabled(false);
-			editbet.addActionListener(new ActionListener() {
+
+		editbet = new JButton("Edit Bet Amount");
+		editbet.setEnabled(false);
+		editbet.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				String name = JOptionPane.showInputDialog("Give New Bet");
 				if (name.equals("") || name.equals(" ")) {}
 				editbet.setEnabled(false);
-				
+
 				try
-			    {
-			     // float f = Float.valueOf(s.trim()).floatValue();
-			      float amount=new Float(name);
-			      int j=table.getSelectedRow();
+				{
+					// float f = Float.valueOf(s.trim()).floatValue();
+					float amount=new Float(name);
+					int j=table.getSelectedRow();
 					Bet b=bet_list.get(j);
 					if (amount>b.getAmount() && amount>0 ) {
-					facade.updatebets(facade.getLoggeduser(),b, amount);
-					
-					if (j>=0) {
-						TableModel.setValueAt(amount, j, 1);
-					}
-					JOptionPane.showMessageDialog(null, "Bet Amount Updated successfully");
-					
+						facade.updatebets(facade.getLoggeduser(),b, amount);
+
+						if (j>=0) {
+							TableModel.setValueAt(amount, j, 1);
+						}
+						JOptionPane.showMessageDialog(null, "Bet Amount Updated successfully");
+
 					}
 					else
 					{
-				JOptionPane.showMessageDialog(null, "Stack Amount Must be Greater then Previous Amount");
+						JOptionPane.showMessageDialog(null, "Stack Amount Must be Greater then Previous Amount");
 
 					}
 
-			     
-			    }
-			    catch (NumberFormatException nfe)
-			    {
+
+				}
+				catch (NumberFormatException nfe)
+				{
 					JOptionPane.showMessageDialog(null, "Please Enter Valid Amount");
-			    }
-               
-				
-				
-				
-								
+				}
 			}
 		});
-	
+
 		editbet.setBounds(243, 426, 141, 26);
 		add(editbet);
 
 		JLabel lblActiveBets = new JLabel("Active bets:");
 		lblActiveBets.setBounds(30, 137, 66, 16);
 		add(lblActiveBets);
-		
+
 		table = new JTable();
 		table.addMouseListener(new MouseAdapter() {
 			@Override
@@ -187,57 +156,54 @@ public class ProfilePanel extends JPanel {
 				Bet b=bet_list.get(j);
 				if (facade.Enable_or_not(b, 48)) {
 					editbet.setEnabled(true);
-					
+
 				}
-//				else
-//				{
-//					JOptionPane.showMessageDialog(null, "There Must be Gap of 48 hours before bet take place");
-//	
-//				}
+				//				else
+				//				{
+				//					JOptionPane.showMessageDialog(null, "There Must be Gap of 48 hours before bet take place");
+				//	
+				//				}
 				//48 hours
 				if (facade.Enable_or_not(b, 24)) {
 					DeleteBet.setEnabled(true);
-					
+
 				}
-//				else
-//				{
-//					JOptionPane.showMessageDialog(null, "Sorry,There is less than 24 hours for bet to Place");
-//
-//				}
-				
-				
-				
+				//				else
+				//				{
+				//					JOptionPane.showMessageDialog(null, "Sorry,There is less than 24 hours for bet to Place");
+				//
+				//				}
 			}
 		});
-	     table.setBounds(75, 189, 1, 1);
+		table.setBounds(75, 189, 1, 1);
 		add(table);
-		
-	
-		
-		 scrollPane = new JScrollPane(table);
+
+
+
+		scrollPane = new JScrollPane(table);
 		scrollPane.setBounds(12, 165, 551, 249);
 		add(scrollPane);
-		
-		 ViewFulldetail = new JButton("Show Full Detail");
-		 ViewFulldetail.setEnabled(false);
-		 ViewFulldetail.addActionListener(new ActionListener() {
-		 	public void actionPerformed(ActionEvent arg0) {
-		 		int j=table.getSelectedRow();
-		 		Bet b=bet_list.get(j);
-		 		BetDetail fulldetail=new BetDetail(b);
-		 		//fulldetail.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
 
-		 		fulldetail.setVisible(true);
-		 	}
-		 });
+		ViewFulldetail = new JButton("Show Full Detail");
+		ViewFulldetail.setEnabled(false);
+		ViewFulldetail.addActionListener(new ActionListener() {
+			public void actionPerformed(ActionEvent arg0) {
+				int j=table.getSelectedRow();
+				Bet b=bet_list.get(j);
+				BetDetail fulldetail=new BetDetail(b);
+				//fulldetail.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
+
+				fulldetail.setVisible(true);
+			}
+		});
 		ViewFulldetail.setEnabled(false);
 		ViewFulldetail.setBounds(87, 426, 141, 26);
 		add(ViewFulldetail);
-		
-		
-		
-		 DeleteBet = new JButton("Delete Bet");
-		 DeleteBet.setEnabled(false);
+
+
+
+		DeleteBet = new JButton("Delete Bet");
+		DeleteBet.setEnabled(false);
 		DeleteBet.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				int j=table.getSelectedRow();
@@ -246,89 +212,52 @@ public class ProfilePanel extends JPanel {
 				facade.remove_bet(facade.getLoggeduser(),b);
 				TableModel.removeRow(j);
 				JOptionPane.showMessageDialog(null, "Bet Removed successfully");
-
-				
-				
-				 
-
 			}
 		});
 		DeleteBet.setBounds(402, 426, 122, 26);
 		add(DeleteBet);
-		
+
 		JButton btnNewButton = new JButton("Delete Profile");
 		btnNewButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent arg0) {
-				
-				int option = JOptionPane.showConfirmDialog(getParent(),"This Will Delete Your Account and All your bets, Want to Do it?","Sure?",
-						JOptionPane.WARNING_MESSAGE,JOptionPane.OK_CANCEL_OPTION);
-				if (option==0) {
 				facade.removeUser(facade.getLoggeduser().getID());
-//				facade.logOut();
-//				MainGUI mai=MainGUI.getInstance();
-//				mai.resetPanels();
-//				mai.visitorView();
-				System.gc();
-				for (Window window : Window.getWindows()) {
-				    window.dispose();
-				}
-				facade.logOut();;
-				}
-				
-				
-				
+				facade.logOut();
+				MainGUI mai=MainGUI.getInstance();
+				mai.resetPanels();
+				mai.visitorView();
 			}
 		});
 		btnNewButton.setBounds(501, 87, 128, 26);
 		add(btnNewButton);
-		
-		 editProfile = new JButton("Edit Profile");
-		editProfile.setEnabled(true);
-	
-		editProfile.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent arg0) {
-				profile=facade.refreshProfile();
-				User_Edit j=new User_Edit(profile);
-                 j.setVisible(true);
-			}
-		});
-		editProfile.setBounds(501, 134, 128, 26);
-		add(editProfile);
-		
+
 
 		if(profile != null) {
-			if (facade.getLoggeduser().isAdmin()) {
-				editProfile.setEnabled(false);
-			}
 			textArea.setText(profile.getID());
 			textArea_2.setText(profile.getSurname());
 			textArea_1.setText(profile.getName());
 			textArea_3.setText(String.valueOf(facade.getCash()));
-			
+
 			bet_list=facade.getBets(facade.getLoggeduser());
 			String[] columns = new String[] {
-		            "Status", "Stake","Placement Date"};
+					"Status", "Stake","Placement Date"};
 			Object data[][]=facade.getDAta(null, bet_list);
-			 TableModel =new DefaultTableModel(data,columns) {
-
-				   @Override
-				   public boolean isCellEditable(int row, int column) {
-				       //Only the third column
-				       return false;
-				   }
-				};
+			TableModel =new DefaultTableModel(data,columns) {
+				@Override
+				public boolean isCellEditable(int row, int column) {
+					//Only the third column
+					return false;
+				}
+			};
 			table.setModel(TableModel);
-			
+
 			TableColumnModel columnModel = table.getColumnModel();
 			columnModel.getColumn(0).setPreferredWidth(40);
-    		columnModel.getColumn(1).setPreferredWidth(40);
-     		columnModel.getColumn(2).setPreferredWidth(140);
-
-		
+			columnModel.getColumn(1).setPreferredWidth(40);
+			columnModel.getColumn(2).setPreferredWidth(140);
 		}
 	}
 }
 
 
-	
+
 
